--- a/src/components/Users/UserList/userList.module.css
+++ b/src/components/Users/UserList/userList.module.css
@@ -39,11 +39,7 @@
     width: 100%;
   }
 }
-
 .cardHover:hover {
-  background-color: #dfe0eb;
-  opacity: 0.7;
   cursor: pointer;
-  overflow: hidden;
-  width: 100%;
+  background-color: #3752ff1c;
 }
